k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleettwin-frontend
  labels:
    app.kubernetes.io/name: fleettwin-frontend
    app.kubernetes.io/part-of: fleettwin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fleettwin-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fleettwin-frontend
        app.kubernetes.io/part-of: fleettwin
    spec:
      containers:
        - name: frontend
          image: ghcr.io/hemanth-008/fleettwin-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: fleettwin-frontend
  labels:
    app.kubernetes.io/name: fleettwin-frontend
    app.kubernetes.io/part-of: fleettwin
spec:
  selector:
    app.kubernetes.io/name: fleettwin-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
